[metadata]
name = ura_api-chengguan
version = 0.0.1
author = Teo Cheng Guan
author_email = chengguan.teo@gmail.com
description = A python wrapper to URA APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chengguan/ura_api
project_urls =
    Bug Tracker = https://github.com/chengguan/ura_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src